behavior/deployment/api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: granite-api-gateway
  namespace: white-hat
  labels:
    app: granite-api
spec:
  selector:
    serving.kserve.io/inferenceservice: granite-multitask-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: granite-api
  namespace: white-hat
  labels:
    app: granite-api
spec:
  to:
    kind: Service
    name: granite-api-gateway
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
